# libcomcom

./: AUTHORS  Doxyfile  HACKING  Makefile.am  README  TODO  config.h.in  configure.ac
src/: Makefile.am  lib.c  libcomcom-0.0.1.pc.in  libcomcom.h
tests/: Makefile.am  test_comcom.c
