dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(libcomcom, 0.0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC

LT_INIT

PKG_CHECK_MODULES([CHECK], [check >= 0.9.4])



AC_OUTPUT([
Makefile
src/libcomcom-0.0.1.pc
src/Makefile
tests/Makefile
])
